--- a/views/juego.hbs
+++ b/views/juego.hbs
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link
+      rel="shortcut icon"
+      href="https://www.benwhite.com/wp-content/uploads/B-favicon.png"
+      type="image/x-icon"
+    />
     <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
@@ -34,7 +40,7 @@
       rel="stylesheet"
     />
 
-    <title>Document</title>
+    <title>B&N</title>
   </head>
 
   <body>
