--- a/views/juego.hbs
+++ b/views/juego.hbs
@@ -4,12 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <link
-      rel="shortcut icon"
-      href="https://www.benwhite.com/wp-content/uploads/B-favicon.png"
-      type="image/x-icon"
-    />
     <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
@@ -17,12 +11,13 @@
       integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
       crossorigin="anonymous"
     />
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
       crossorigin="anonymous"
     ></script>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.css">
     <link rel="stylesheet" href="./css/style.css" />
     <!-- PARTE DE FUENTES -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -40,7 +35,7 @@
       rel="stylesheet"
     />
 
-    <title>B&N</title>
+    <title>Document</title>
   </head>
 
   <body>
@@ -68,34 +63,43 @@
               maxlength="1"
               oninput="if(this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength)"
               class="square numero focus"
+              onkeyup="if (this.value.length == this.getAttribute('maxlength')) nu2.focus()"
               disabled
             />
             <input
               type="number"
+              id="nu2"
               maxlength="1"
               oninput="if(this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength)"
               class="square numero focus"
+              onkeyup="if (this.value.length == this.getAttribute('maxlength')) nu3.focus()"
               disabled
             />
             <input
               type="number"
+              id="nu3"
               maxlength="1"
               oninput="if(this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength)"
               class="square numero focus"
+              onkeyup="if (this.value.length == this.getAttribute('maxlength')) nu4.focus()"
               disabled
             />
             <input
               type="number"
+              id="nu4"
               maxlength="1"
               oninput="if(this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength)"
               class="square numero focus"
+              onkeyup="if (this.value.length == this.getAttribute('maxlength'))"
               disabled
             />
           </div>
-          <button class="btn btn-primary send">Enviar</button>
+          <button id="enviarNumero" class="btn btn-primary send">Enviar</button>
         </div>
       </div>
-
+      <div>
+        <p id="alerta"></p>
+      </div>
       <div class="container3">
         <div class="cuadro-labels">
           <label for="nombre" id="yo">Djnachi</label>
@@ -113,27 +117,33 @@
               maxlength="1"
               oninput="if(this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength)"
               class="square adivinar"
+              onkeyup="if (this.value.length == this.getAttribute('maxlength')) input2.focus()"
             />
             <input
+              id="input2"
               type="number"
               maxlength="1"
               oninput="if(this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength)"
               class="square adivinar"
+              onkeyup="if (this.value.length == this.getAttribute('maxlength')) input3.focus()"
             />
             <input
+              id="input3"
               type="number"
               maxlength="1"
               oninput="if(this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength)"
               class="square adivinar"
+              onkeyup="if (this.value.length == this.getAttribute('maxlength')) input4.focus()"
             />
             <input
+              id="input4"
               type="number"
               maxlength="1"
               oninput="if(this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength)"
               class="square adivinar"
             />
           </div>
-          <button class="btn btn-primary enviar">Enviar</button>
+          <button id="enviarNumero2"class="btn btn-primary enviar">Enviar</button>
         </div>
       </div>
 
@@ -158,10 +168,10 @@
         </table>
       </div>
 
-      <div class="container">
+      <div class="container mb-2 d-none d-xl-block">
         <div class="row">
           <!-- inicio de la caja de chat con bootstrap -->
-          <div class="col-md-6 col-md-offset-3 tabla">
+          <div class=" col-md-4 tabla">
             <div class="card">
               <div class="card-header">
                 Chat
@@ -202,6 +212,8 @@
     <script src="/socket.io/socket.io.js"></script>
 
     <script src="./js/juego.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
   </body>
 
 </html>
